syntax = "proto3";

option java_package = "com.cj.protobuf.entity";

option java_outer_classname = "Student";

message StudentBuf {

    int32 id = 1;
    string name = 2;
    string email = 3;
    //枚举类
    enum Sex {
        MAN = 0;
        WOMAN = 1;
    }

    Sex sex = 4;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }
    //内部类
    message PhoneNumber {
        string number = 1;
        PhoneType phoneType = 2;
    }
    //集合
    repeated PhoneNumber phone = 5;

}